--- a/index.html
+++ b/index.html
@@ -1,22 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Настроение</title>
-  <script id="quotes_json" type="application/json">
-    [
-      {
-        "phrase": "Кукурузные хлопья - теперь без асбеста!",
-        "signature": "©Неизвестный маркетолог"
-      },
-      {
-        "phrase": "Собираюсь жить вечно, пока всё идёт нормально"
-      },
-      {
-        "phrase": "Если ты будешь усердно работать по 8 часов в день, то обязательно станешь боссом и начнешь работать по 12"
-      }
-    ]
-  </script>
+    <meta charset="utf-8">
+    <title>Настроение</title>
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/main.css">
+
+    <script id="quotes_json" type="application/json">
+        [
+            {
+                "phrase": "Кукурузные хлопья - теперь без асбеста!",
+                "signature": "©Неизвестный маркетолог"
+            },
+            {
+                "phrase": "Цены на бензин перестали меня беспокоить в тот момент, когда я пересел на бентли.",
+                "signature": "©Роберт Дауни мл."
+            },
+            {
+                "phrase": "Можно дожить до ста лет, если отказаться от всего того, ради чего хочется жить сто лет.",
+                "signature": "©Вуди Аллен"
+            },
+            {
+                "phrase": "Если дела идут плохо — не ходи с ними.",
+                "signature": "©Элвис Пресли"
+            },
+            {
+                "phrase": "Даже если ты один против всех — это не значит, что ты не прав!",
+                "signature": "©Хью Лори"
+            },
+            {
+                "phrase": "Если у вас короткие и кривые ноги - носите декольте.",
+                "signature": "©Кристиан Диор"
+            },
+            {
+                "phrase": "Собираюсь жить вечно, пока всё идёт нормально"
+            },
+            {
+                "phrase": "Если ты будешь усердно работать по 8 часов в день, то обязательно станешь боссом и начнешь работать по 12"
+            }
+        ]
+    </script>
+
+
 </head>
 <body>
+
+<div class="container">
+        <div class="absolute-center">
+            <h1 class="page-header text-center">Случайная цитата</h1>
+            <p id="phrase" class="lead"></p>
+            <p id="signature"></p>
+        </div>
+</div>
+
+<script type="text/javascript" src="static/js/jquery.min.js"></script>
+<script type="text/javascript" src="static/js/get_quote.js"></script>
+
 </body>
 </html>
