Use class indstead id for signature and phrase elements

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <div class="container">
         <div class="absolute-center">
             <h1 class="page-header text-center">Случайная цитата</h1>
-            <p id="phrase" class="lead"></p>
-            <p id="signature"></p>
+            <p class="lead phrase"></p>
+            <p class="signature"></p>
         </div>
 </div>
 
